--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
+        "pre": "yarn",
+        "serve": "vue-cli-service serve --open",
         "build": "vue-cli-service build",
         "lint": "vue-cli-service lint"
     },
@@ -24,6 +25,7 @@
         "bpmn-js": "^9.4.1",
         "eslint": "^5.16.0",
         "eslint-plugin-vue": "^5.0.0",
+        "less": "^4.2.0",
         "vue-router": "^3.1.3",
         "vue-template-compiler": "^2.6.10"
     },
